Squishy images fixed, better logs

--- a/css/style_suckless_default.css
+++ b/css/style_suckless_default.css
@@ -100,12 +100,10 @@ a:hover {
 	max-height: 80%;
 }
 .gallery img, .gallery video {
-	height: 90%;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	max-width:100%;
-	max-height:100%;
 	border-collapse:collapse;
 	border-radius:25px 25px 25px 25px;
 	cursor: pointer;
